Refactor emote handling and player skin management; improve clarity and structure